// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppPricingPermissionsSection should match a snapshot for desktop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="el-text-base el-subtitle"
      >
        Desktop Integration
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="agencycloud://process/webpage?url=https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
      </p>
      <div
        class="el-mb11 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          DESCRIPTION
        </div>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Pricing Information
      </h2>
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
          APP_DEVELOPER
          . Please contact 
          APP_DEVELOPER
           directly for information about pricing.
        </p>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Data Permissions
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By installing this app, you are granting the following permissions to your data:
      </p>
      0
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          https://foundations-documentation.reapit.cloud/platform-glossary/permissions
        </a>
      </p>
    </div>
  </body>,
  "container": <div>
    <h2
      class="el-text-base el-subtitle"
    >
      Desktop Integration
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      For more information regarding Desktop Integration types, please
       
      <a
        href="agencycloud://process/webpage?url=https://marketplace-documentation.reapit.cloud/integration-types"
        rel="noopener noreferrer"
        target="_blank"
      >
        click here
      </a>
    </p>
    <div
      class="el-mb11 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        DESCRIPTION
      </div>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Pricing Information
    </h2>
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
        APP_DEVELOPER
        . Please contact 
        APP_DEVELOPER
         directly for information about pricing.
      </p>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Data Permissions
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      By installing this app, you are granting the following permissions to your data:
    </p>
    0
    <p
      class="el-text-base el-body-text el-has-grey-text el-mt6"
    >
      For more detailed information about App permissions, please
       
      <a
        href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://foundations-documentation.reapit.cloud/platform-glossary/permissions
      </a>
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppPricingPermissionsSection should match a snapshot for has a pricing uri 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="el-text-base el-subtitle"
      >
        Desktop Integration
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="agencycloud://process/webpage?url=https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
      </p>
      <div
        class="el-mb11 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          DESCRIPTION
        </div>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Pricing Information
      </h2>
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          APP_DEVELOPER
           have specified that there is a cost for using this App/Integration, please
           
          <a
            href="agencycloud://process/webpage?url=SOME_URL"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          APP_DEVELOPER
          .
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this App/Integration.
        </p>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Data Permissions
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By installing this app, you are granting the following permissions to your data:
      </p>
      0
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          https://foundations-documentation.reapit.cloud/platform-glossary/permissions
        </a>
      </p>
    </div>
  </body>,
  "container": <div>
    <h2
      class="el-text-base el-subtitle"
    >
      Desktop Integration
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      For more information regarding Desktop Integration types, please
       
      <a
        href="agencycloud://process/webpage?url=https://marketplace-documentation.reapit.cloud/integration-types"
        rel="noopener noreferrer"
        target="_blank"
      >
        click here
      </a>
    </p>
    <div
      class="el-mb11 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        DESCRIPTION
      </div>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Pricing Information
    </h2>
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        APP_DEVELOPER
         have specified that there is a cost for using this App/Integration, please
         
        <a
          href="agencycloud://process/webpage?url=SOME_URL"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        APP_DEVELOPER
        .
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this App/Integration.
      </p>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Data Permissions
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      By installing this app, you are granting the following permissions to your data:
    </p>
    0
    <p
      class="el-text-base el-body-text el-has-grey-text el-mt6"
    >
      For more detailed information about App permissions, please
       
      <a
        href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://foundations-documentation.reapit.cloud/platform-glossary/permissions
      </a>
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppPricingPermissionsSection should match a snapshot for has a pricing uri and not desktop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="el-text-base el-subtitle"
      >
        Desktop Integration
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
      </p>
      <div
        class="el-mb11 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          DESCRIPTION
        </div>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Pricing Information
      </h2>
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          APP_DEVELOPER
           have specified that there is a cost for using this App/Integration, please
           
          <a
            href="SOME_URL"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          APP_DEVELOPER
          .
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this App/Integration.
        </p>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Data Permissions
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By installing this app, you are granting the following permissions to your data:
      </p>
      0
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          https://foundations-documentation.reapit.cloud/platform-glossary/permissions
        </a>
      </p>
    </div>
  </body>,
  "container": <div>
    <h2
      class="el-text-base el-subtitle"
    >
      Desktop Integration
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      For more information regarding Desktop Integration types, please
       
      <a
        href="https://marketplace-documentation.reapit.cloud/integration-types"
        rel="noopener noreferrer"
        target="_blank"
      >
        click here
      </a>
    </p>
    <div
      class="el-mb11 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        DESCRIPTION
      </div>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Pricing Information
    </h2>
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        APP_DEVELOPER
         have specified that there is a cost for using this App/Integration, please
         
        <a
          href="SOME_URL"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        APP_DEVELOPER
        .
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this App/Integration.
      </p>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Data Permissions
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      By installing this app, you are granting the following permissions to your data:
    </p>
    0
    <p
      class="el-text-base el-body-text el-has-grey-text el-mt6"
    >
      For more detailed information about App permissions, please
       
      <a
        href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://foundations-documentation.reapit.cloud/platform-glossary/permissions
      </a>
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppPricingPermissionsSection should match a snapshot for not desktop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="el-text-base el-subtitle"
      >
        Desktop Integration
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
      </p>
      <div
        class="el-mb11 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          DESCRIPTION
        </div>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Pricing Information
      </h2>
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
          APP_DEVELOPER
          . Please contact 
          APP_DEVELOPER
           directly for information about pricing.
        </p>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Data Permissions
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By installing this app, you are granting the following permissions to your data:
      </p>
      0
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          https://foundations-documentation.reapit.cloud/platform-glossary/permissions
        </a>
      </p>
    </div>
  </body>,
  "container": <div>
    <h2
      class="el-text-base el-subtitle"
    >
      Desktop Integration
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      For more information regarding Desktop Integration types, please
       
      <a
        href="https://marketplace-documentation.reapit.cloud/integration-types"
        rel="noopener noreferrer"
        target="_blank"
      >
        click here
      </a>
    </p>
    <div
      class="el-mb11 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        DESCRIPTION
      </div>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Pricing Information
    </h2>
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
        APP_DEVELOPER
        . Please contact 
        APP_DEVELOPER
         directly for information about pricing.
      </p>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Data Permissions
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      By installing this app, you are granting the following permissions to your data:
    </p>
    0
    <p
      class="el-text-base el-body-text el-has-grey-text el-mt6"
    >
      For more detailed information about App permissions, please
       
      <a
        href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://foundations-documentation.reapit.cloud/platform-glossary/permissions
      </a>
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
